Update Gradle wrapper to 9.2.1 and resolve pmd issues
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>